[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/UI/Menu/Options.gd" type="Script" id=1]
[ext_resource path="res://assets/UI/Menu/User_Settings_Options.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/UI/Menu/Controls_settings.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]

bg_color = Color( 0.225937, 0.212708, 0.265625, 1 )
border_width_left = 15
border_width_top = 10
border_width_right = 15
border_width_bottom = 10
border_color = Color( 0.223529, 0.211765, 0.266667, 1 )

[sub_resource type="StyleBoxFlat" id=2]

content_margin_left = 0.0
bg_color = Color( 0.287646, 0.275574, 0.335938, 1 )

[sub_resource type="StyleBoxFlat" id=3]

content_margin_left = 0.0
bg_color = Color( 0.287646, 0.275574, 0.335938, 1 )

[sub_resource type="StyleBoxFlat" id=4]

content_margin_left = 0.0
bg_color = Color( 0.287646, 0.275574, 0.335938, 1 )

[sub_resource type="StyleBoxFlat" id=5]

content_margin_left = 0.0
bg_color = Color( 0.287646, 0.275574, 0.335938, 1 )

[sub_resource type="StyleBoxFlat" id=6]

content_margin_left = 0.0
bg_color = Color( 0.287646, 0.275574, 0.335938, 1 )

[sub_resource type="StyleBoxFlat" id=7]

content_margin_left = 0.0
bg_color = Color( 0.287646, 0.275574, 0.335938, 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TabContainer" type="TabContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
custom_styles/tab_fg = SubResource( 1 )
tab_align = 0

[node name="Player" type="Tabs" parent="Panel/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 42.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Control" parent="Panel/TabContainer/Player" instance=ExtResource( 2 )]
rect_scale = Vector2( 1.2, 1.2 )

[node name="Dev" type="Tabs" parent="Panel/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 42.0
margin_right = -4.0
margin_bottom = -4.0
tab_align = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/TabContainer/Dev"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 38.0

[node name="tAreas" type="CheckButton" parent="Panel/TabContainer/Dev/VBoxContainer"]
margin_right = 1016.0
margin_bottom = 40.0
custom_styles/hover = SubResource( 2 )
text = "Enable Area hide/show"

[node name="tCollisionShapes" type="CheckButton" parent="Panel/TabContainer/Dev/VBoxContainer"]
margin_top = 44.0
margin_right = 1016.0
margin_bottom = 84.0
custom_styles/hover = SubResource( 3 )
text = "Enable Collision shapes"

[node name="tPMonitor" type="CheckButton" parent="Panel/TabContainer/Dev/VBoxContainer"]
margin_top = 88.0
margin_right = 1016.0
margin_bottom = 128.0
custom_styles/hover = SubResource( 4 )
text = "Show Performance Monitor"

[node name="CheckButton4" type="CheckButton" parent="Panel/TabContainer/Dev/VBoxContainer"]
visible = false
margin_top = 88.0
margin_right = 1016.0
margin_bottom = 128.0
custom_styles/hover = SubResource( 5 )
text = "Enable Networking"

[node name="CheckButton5" type="CheckButton" parent="Panel/TabContainer/Dev/VBoxContainer"]
visible = false
margin_top = 88.0
margin_right = 1016.0
margin_bottom = 128.0
custom_styles/hover = SubResource( 6 )
text = "Enable Teleport"

[node name="tDecimate" type="CheckButton" parent="Panel/TabContainer/Dev/VBoxContainer"]
margin_top = 132.0
margin_right = 1016.0
margin_bottom = 172.0
custom_styles/hover = SubResource( 7 )
text = "Decimate objects"

[node name="tFPSLim" type="CheckButton" parent="Panel/TabContainer/Dev/VBoxContainer"]
margin_top = 176.0
margin_right = 1016.0
margin_bottom = 216.0
custom_styles/hover = SubResource( 7 )
text = "Limit FPS"

[node name="Display" type="Tabs" parent="Panel/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 42.0
margin_right = -4.0
margin_bottom = -4.0

[node name="GameState" type="Tabs" parent="Panel/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 42.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Controls" parent="Panel/TabContainer" instance=ExtResource( 3 )]
visible = false
margin_right = -4.0
margin_bottom = -4.0

[node name="Exit" type="Button" parent="."]
margin_left = 991.0
margin_top = 7.0
margin_right = 1011.0
margin_bottom = 27.0
text = "X"

[connection signal="focus_entered" from="Panel/TabContainer/Dev/VBoxContainer" to="." method="_on_VBoxContainer_focus_entered"]
[connection signal="pressed" from="Panel/TabContainer/Dev/VBoxContainer/tAreas" to="." method="_on_tAreas_pressed"]
[connection signal="pressed" from="Panel/TabContainer/Dev/VBoxContainer/tCollisionShapes" to="." method="_on_tCollisionShapes_pressed"]
[connection signal="pressed" from="Panel/TabContainer/Dev/VBoxContainer/tPMonitor" to="." method="_on_tPMonitor_pressed"]
[connection signal="pressed" from="Panel/TabContainer/Dev/VBoxContainer/tDecimate" to="." method="_on_tDecimate_pressed"]
[connection signal="pressed" from="Panel/TabContainer/Dev/VBoxContainer/tFPSLim" to="." method="_on_tFPSLim_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
